--- a/Contents/_Publications.cshtml
+++ b/Contents/_Publications.cshtml
@@ -8,9 +8,21 @@
     
     //~need to figure out how to use the json file for this~
     var publicationList = {
-         "Badam2014": {
+
+        "Badam2014b": {
+            "title": "Munin: A Peer-to-Peer Middleware for Ubiquitous Analytics and Visualization Spaces",
+            "author": "S. K. Badam, E. Fisher, and N. Elmqvist",
+            "journal": "IEEE Transactions on Visualization & Computer Graphics",
+            "year": "2014",
+            "volume": "to appear",
+            "number": "",
+            "pages": "",
+            "type": "journal"
+        }, 
+
+        "Badam2014a": {
             "title": "Tracing and Sketching Performance using Blunt-tipped Styli on Direct-Touch Tablets",
-            "author": "Sriram Karthik Badam, Senthil Chandrasegaran, Niklas Elmqvist, and Karthik Ramani",
+            "author": "S. K. Badam, S. Chandrasegaran, N. Elmqvist, and K. Ramani",
             "booktitle": "Proceedings of the ACM Conference on Advanced Visual Interfaces",
             "year": "2014",
             "pages": "193-200",
@@ -21,7 +33,7 @@
         
         "Zhao2014": {
             "title": "skWiki: A Multimedia Sketching System for Collaborative Creativity",
-            "author": "Zhenpeng Zhao, Sriram Karthik Badam, Senthil Chandrasegaran, Deok Gun Park, Niklas Elmqvist, Lorraine Kisselburgh, and Karthik Ramani",
+            "author": "Z. Zhao, S. K. Badam, S. Chandrasegaran, D. G. Park, N. Elmqvist, L. Kisselburgh, and K. Ramani",
             "booktitle": "Proceedings of the ACM CHI Conference on Human Factors in Computing Systems",
             "year": "2014",
             "pages": "1235-1244",
@@ -32,7 +44,7 @@
     
         "Fisher2014": {
             "title": "Designing Peer-to-Peer Distributed User Interfaces: Case Studies on Building Distributed Applications",
-            "author": "Eli-Raymond Fisher, Sriram-Karthik Badam, and Niklas Elmqvist",
+            "author": "E. R. Fisher, S. K. Badam, and N. Elmqvist",
             "journal": "International Journal of Human-Computer Studies",
             "volume": "72",
             "number": "1",
@@ -41,8 +53,6 @@
             "type": "journal",
             "link": "https://engineering.purdue.edu/~elm/projects/dui-design/dui-design.pdf"
         }
-    
-       
     };
     
     console.log(publicationList);
