--- a/Default.cshtml
+++ b/Default.cshtml
@@ -3,29 +3,30 @@
 }
 
 <div id="defaultWork" class="mainContactDiv">
-    <p style="font-weight: 800">Contact Information</p>
+    <p style="font-family: Georgia; font-weight: 800">Contact Information</p>
     <p>Sriram Karthik Badam </p>
-    <p>Research Assistant </p>
-    <p>Purdue University </p>
-    <p>465 NorthWestern Avenue</p>
-    <p>West Lafayette, IN 47907-2035, USA</p>
+    <p>Graduate Research Assistant </p>
+    <p>University of Maryland</p>
+    <p>College Park, MD 20742, USA</p>
 
 
-    <p style="font-weight: 800; padding-top: 10px">Email</p>
-    <p><a>sbadam@purdue.edu</a></p>
-    <p><a>sriram.karthik6@gmail.com</a></p>
+    <p style="font-family: Georgia; font-weight: 800; padding-top: 10px">E-mail</p>
+    <p><a href="mailto:sbadam@umd.edu" class="email">sbadam [at] umd [dot] edu</a></p>
+    <p><a href="mailto:sriram.karthik6@gmail.com" class="email">sriram.karthik6 [at] gmail [dot] com</a></p>
+    
+    <p style="font-family: Georgia; font-weight: 800; padding-top: 10px">Links</p>
+    <a href="http://scholar.google.com/citations?user=ExY_mkUAAAAJ&hl=en" style="color: #ff6a00">[Google Scholar]</a>
+    <a href="data/badam-CV.pdf" style="color: #ff6a00">[Resume]</a>
 
-    <p style="font-weight: 800; padding-top: 10px">Resume</p>
-    <a href="data/badam_resume.pdf" style="color: #ff6a00">badam_resume.pdf</a>
     
 </div>
 
 <div id="defaultKeyWords" class="mainKeyWordDiv">
-    <p style="font-weight: 800">Keywords</p>
+    <p style="font-family: Georgia; font-weight: 800;">Keywords</p>
 
     <ul>
         <li>
-            <p>Human Computer Interaction.</p>
+            <p>Human-Computer Interaction.</p>
         </li>
 
         <li>
@@ -36,43 +37,35 @@
         </li>
     </ul>
 
-    <p style="font-weight: 800; padding-top: 10px">News & Events</p>
+    <p style="font-weight: 800; padding-top: 10px; font-family: Georgia">News & Events</p>
     <ul>
         <li>
-            <p>>> <a href="http://avi2014.deib.polimi.it">ACM AVI 2014 (Como, Italy)</a> -- Presenting work on performance of direct-touch tablets for sketching</p>
+            <p>>> <a href="http://its2014.org/">ACM ITS 2014 (Dresden, Germany)</a> -- Presenting PolyChrome framework for Collaborative web visualization</p>
         </li>
 
         <li>
-            <p>>> <a href="http://chi2014.acm.org">ACM CHI 2014 (Toronto, Canada)</a> -- Presenting <a href="https://github.com/karthikbadam/skWiki">skWiki</a>: a collaborative content creation framework for early design</p>
+            <p>>> <a href="http://avi2014.deib.polimi.it">ACM AVI 2014 (Como, Italy)</a> -- Presented work on performance of direct-touch tablets for sketching</p>
         </li>
 
         <li>
-            <p>>> <a href="https://engineering.purdue.edu/pivot/pmwiki.php?n=Main.HomePage">Pivot Lab</a> -- For more details on what we do.</p>
+            <p>>> <a href="http://chi2014.acm.org">ACM CHI 2014 (Toronto, Canada)</a> -- Presented <a href="https://github.com/karthikbadam/skWiki">skWiki</a>: a collaborative content creation framework for early design</p>
         </li>
-        <li>
-            <p>>> Next Target: <a href="http://www.computer.org/portal/web/tvcg">IEEE TVCG</a> -- TimeFork project before July 2014</p>
-        </li>
+        
     </ul>
 
 </div>
 
 <div id="advisorDetails">
-    <p style="font-weight: 800">Advisor</p>
+    <p style="font-weight: 800; color: #000">Advisor</p>
     <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a> as a 
         Graduate Research Assistant.
-       During my undergrad, I worked on Android application development
+       During my undergrad, I worked on Android applications
        for data collection and sharing through bluetooth-based peer-to-peer networks in post-disaster situations.
-       I entered the direct Ph.D. program at Purdue University two years ago (August 2012) right after my undergrad 
-       at Indian Institute of Technology Hyderabad, without much clue of my research directions, 
-       but rather a vague idea of applying my knowledge of computer vision and machine learning to processes with human-in-the-loop.
-       My research interests have evolved over time under Niklas's guidance and a unified summary of my current research directions 
+       I received a Masters degree from Purdue University with a thesis in Computer Engineering titled "Developing Digital Media Platforms for Early Design". 
+       This work incidentally combines my interest in direct-touch tablets and sketching. 
+       My research interests have evolved over time under Niklas's guidance and a unified summary of my current research directions
        can be found <a href="/data/DC_proposal_badam.pdf">here</a>.
        
-    <p style="font-weight: 800; padding-top: 10px">Advisees</p>
-    <p><a style="font-weight: 800; color: #000">None</a>. 
-      If you are interested, feel free to contact me to figure something out 
-      after I am anointed with a "Dr." title. ;)</p>
-    
 </div>
 
 <div id="footer">
