--- a/Default.cshtml
+++ b/Default.cshtml
@@ -40,7 +40,7 @@
     <p style="font-weight: 800; padding-top: 10px; font-family: Georgia">News & Events</p>
     <ul>
         <li>
-            <p>>> <a href="http://its2014.org/">ACM ITS 2014 (Dresden, Germany)</a> -- Presenting PolyChrome framework for Collaborative web visualization</p>
+            <p>>> <a href="http://its2014.org/">ACM ITS 2014 (Dresden, Germany)</a> -- Presenting PolyChrome framework for collaborative web visualization</p>
         </li>
 
         <li>
