--- a/Content/Site.css
+++ b/Content/Site.css
@@ -77,21 +77,33 @@ a:hover {
 }
 
 header {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: Georgia, 'Source Sans Pro', sans-serif;
     float: left;
     width: 25%;
     margin-left: 30px;
     margin-right: 30px;
+    text-align: left;
+}
+
+img.desaturate { 
+    -webkit-filter: grayscale(50%);
+    -moz-filter: grayscale(100%);
+    filter: grayscale(100%);
+    border: 1px solid black; 
+    margin-left: 1px; 
 }
 
 header p {
-    font-size: 14px;
-    line-height: 20px;
-    margin-bottom: 20px;
+   font-size: 0.9em;
+   line-height: 20px;
+   margin-bottom: 10px;
+   font-family: Georgia;
+   font-style: italic; 
+   color: #444;
 }
 
 nav {
-    margin-top: 30px;
+    margin-top: 0px;
 }
 
 nav a {
@@ -145,9 +157,11 @@ h1 {
 }
 
 .title {
-    font-size: 3.2em;
+    font-size: 3.0em;
     line-height: 1em;
     margin-bottom: 17px;
+    font-style: initial;
+    font-family: helvetica, sans-serif;
 }
 
 /* Blog and Twitter Styles */
@@ -351,10 +365,10 @@ ul.thumbnails li:hover span.image-overlay {
 
 #advisorDetails p {
     margin: 0px;
-    font-family: Georgia, helvetica, sans-serif;
+    font-family: helvetica, sans-serif;
     font-size: 14px;
-    font-style: italic;
     color: #333;
+    text-align: justify;
 }
 
 #advisorDetails a {
