--- a/Contents/_Publications.cshtml
+++ b/Contents/_Publications.cshtml
@@ -5,9 +5,18 @@
 
 <script>
 
-    
+
     //~need to figure out how to use the json file for this~
     var publicationList = {
+
+        "Badam2015c": {
+            "title": "PolyChrome: A Cross‐Device Framework for Collaborative Web Visualization",
+            "author": "S. K. Badam and N. Elmqvist",
+            "booktitle": "In Proceedings of the ACM Conference on Interactive Tabletops and Surfaces",
+            "year": "2014",
+            "type": "conference"
+        },
+
 
         "Badam2014b": {
             "title": "Munin: A Peer-to-Peer Middleware for Ubiquitous Analytics and Visualization Spaces",
@@ -15,33 +24,40 @@
             "journal": "IEEE Transactions on Visualization & Computer Graphics",
             "year": "2014",
             "volume": "to appear",
-            "number": "",
-            "pages": "",
             "type": "journal"
-        }, 
+        },
+
+        "roberts2014": {
+            "title": "Visualization Beyond the Desktop – The Next Big Thing",
+            "author": "J. C. Roberts, P. D. Ritsos, S. K. Badam, D. Brodbeck, J. Kennedy, N. Elmqvist",
+            "journal": "IEEE Computer Graphics & Applications",
+            "year": "2014",
+            "volume": "to appear",
+            "type": "journal"
+        },
 
         "Badam2014a": {
             "title": "Tracing and Sketching Performance using Blunt-tipped Styli on Direct-Touch Tablets",
             "author": "S. K. Badam, S. Chandrasegaran, N. Elmqvist, and K. Ramani",
-            "booktitle": "Proceedings of the ACM Conference on Advanced Visual Interfaces",
+            "booktitle": "In Proceedings of the ACM Conference on Advanced Visual Interfaces",
             "year": "2014",
             "pages": "193-200",
             "type": "conference",
             "link": "https://engineering.purdue.edu/cdesign/wp/wp-content/uploads/2014/05/sketch-media.pdf"
         },
 
-        
+
         "Zhao2014": {
             "title": "skWiki: A Multimedia Sketching System for Collaborative Creativity",
             "author": "Z. Zhao, S. K. Badam, S. Chandrasegaran, D. G. Park, N. Elmqvist, L. Kisselburgh, and K. Ramani",
-            "booktitle": "Proceedings of the ACM CHI Conference on Human Factors in Computing Systems",
+            "booktitle": "In Proceedings of the ACM CHI Conference on Human Factors in Computing Systems",
             "year": "2014",
             "pages": "1235-1244",
             "type": "conference",
             "video": "https://www.youtube.com/watch?v=kNBSvsUVFIU",
             "link": "https://engineering.purdue.edu/cdesign/wp/wp-content/uploads/2014/02/skwiki.pdf"
         },
-    
+
         "Fisher2014": {
             "title": "Designing Peer-to-Peer Distributed User Interfaces: Case Studies on Building Distributed Applications",
             "author": "E. R. Fisher, S. K. Badam, and N. Elmqvist",
@@ -54,44 +70,85 @@
             "link": "https://engineering.purdue.edu/~elm/projects/dui-design/dui-design.pdf"
         }
     };
-    
+
     console.log(publicationList);
     var keys = Object.keys(publicationList);
-    
+
     $(document).ready(function () {
-    
+
         keys.forEach(function (key) {
             var publication = publicationList[key];
             if (publication.type == "journal") {
-                var div = $("#publicationsList"+publication.year);
-    
-                div.append('<li style="list-style: square; margin-left: 15px;"><p id="publicationJournal">' + publication.author + ". " + publication.title + ". " + "<i>" + publication.journal + ",</i> " + publication.volume+ "(" + publication.number + "): " + publication.pages + ", " + publication.year + "."+"</p></li>");
-    
-               if (publication.link) {
-                    div.append('<a href='+publication.link +' style="margin-left: 15px;">[PDF]</a>');
-               }
-    
-               if (publication.video) {
-                    div.append('<a href='+publication.video +'>[VIDEO]</a>');
-               }
-    
+                var div = $("#publicationsList" + publication.year);
+
+                var appendString = "";
+                appendString = appendString + '<li style="list-style: square; margin-left: 15px;"><p id="publicationJournal">' + publication.author + ". " + publication.title + ". " + "<i>" + publication.journal + ",</i> ";
+
+                //div.append('<li style="list-style: square; margin-left: 15px;"><p id="publicationJournal">' + publication.author + ". " + publication.title + ". " + "<i>" + publication.journal + ",</i>")
+
+                if (publication.volume) {
+                    appendString += publication.volume;
+                }
+
+                if (publication.number) {
+                    appendString += "(" + publication.number + ")";
+                }
+
+                if (publication.pages) {
+                    appendString += ":" + publication.pages; 
+                }
+
+                if (publication.year) {
+                    appendString += ", " + publication.year + ".";
+
+                }
+
+                appendString += "</p></li>";
+                div.append(appendString)
+
+                if (publication.link) {
+                    div.append('<a href=' + publication.link + ' style="margin-left: 15px;">[PDF]</a>');
+                }
+
+                if (publication.video) {
+                    div.append('<a href=' + publication.video + '>[VIDEO]</a>');
+                }
+
             } else if (publication.type == "conference") {
-    
-                var div = $("#publicationsList"+publication.year);
-                div.append('<li style="list-style: square; margin-left: 15px;"><p id="publicationConference">' + publication.author + ". " + publication.title + ". " + "<i>" + publication.booktitle + ",</i> "+ publication.pages + ", " + publication.year + ". "+"</p></li>");
-    
-               if (publication.link) {
-                    div.append('<a href='+publication.link +' style="margin-left: 15px;">[PDF]</a>');
-               }
-    
-               if (publication.video) {
-                    div.append('<a href='+publication.video +'>[VIDEO]</a>');
-               }
+
+                var div = $("#publicationsList" + publication.year);
+
+                var appendString = "";
+                appendString = appendString + '<li style="list-style: square; margin-left: 15px;"><p id="publicationConference">' + publication.author + ". " + publication.title + ". " + "<i>" + publication.booktitle + "</i>";
+
+                //div.append('<li style="list-style: square; margin-left: 15px;"><p id="publicationConference">' + publication.author + ". " + publication.title + ". " + "<i>" + publication.booktitle + ",</i> ");
+
+
+                if (publication.pages) {
+                    appendString += ", pp. " + publication.pages; 
+                }
+
+                if (publication.year) {
+                    appendString += ", " + publication.year + ".";
+
+                }
+
+                appendString += "</p></li>";
+                div.append(appendString)
+
+
+                if (publication.link) {
+                    div.append('<a href=' + publication.link + ' style="margin-left: 15px;">[PDF]</a>');
+                }
+
+                if (publication.video) {
+                    div.append('<a href=' + publication.video + '>[VIDEO]</a>');
+                }
             }
         });
-    
+
     });
-    
+
 </script>
 
 <div id="publicationsDiv">
