--- a/Default.cshtml
+++ b/Default.cshtml
@@ -15,8 +15,8 @@
     <p><a href="mailto:sriram.karthik6@gmail.com" class="email">sriram.karthik6 [at] gmail [dot] com</a></p>
     
     <p style="font-family: Georgia; font-weight: 800; padding-top: 10px">Links</p>
-    <a href="http://scholar.google.com/citations?user=ExY_mkUAAAAJ&hl=en" style="color: #ff6a00">[Google Scholar]</a>
-    <a href="data/badam-CV.pdf" style="color: #ff6a00">[Resume]</a>
+    <a href="http://scholar.google.com/citations?user=ExY_mkUAAAAJ&hl=en" style="color: #ff6a00; font-size: 12px">[Google Scholar]</a>
+    <a href="data/badam-CV.pdf" style="color: #ff6a00; font-size: 12px">[Resume]</a>
 
     
 </div>
@@ -58,10 +58,10 @@
 <div id="advisorDetails">
     <p style="font-weight: 800; color: #000">Advisor</p>
     <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a> as a 
-        Graduate Research Assistant.
+       research assistant.
        During my undergrad, I worked on Android applications
        for data collection and sharing through bluetooth-based peer-to-peer networks in post-disaster situations.
-       I received a Masters degree from Purdue University with a thesis in Computer Engineering titled "Developing Digital Media Platforms for Early Design". 
+       I received a Masters degree from Purdue University with a thesis in computer engineering titled "Developing Digital Media Platforms for Early Design". 
        This work incidentally combines my interest in direct-touch tablets and sketching. 
        My research interests have evolved over time under Niklas's guidance and a unified summary of my current research directions
        can be found <a href="/data/DC_proposal_badam.pdf">here</a>.
