--- a/Layouts/_SiteLayout.cshtml
+++ b/Layouts/_SiteLayout.cshtml
@@ -15,7 +15,8 @@
     <div id="page" class="group">
         <header>
             <p class="title"><a href="/">Sriram Karthik Badam</a></p>
-            <p>Hi! I am a Ph.D. student in the computer science department at University of Maryland. I work in Visualization, Human-Computer Interaction, and Visual Analytics, and more specifically on supporting collaborative analytics in multi-device ecosystems through middleware frameworks and post-WIMP interaction. I enjoy rock climbing and I am a tennis fanatic.</p>
+            <img src="../data/sbadam.jpg" width="80px" align="right" alt="KB" class="desaturate">
+            <p>Hi! I am a Ph.D. student in the computer science department at University of Maryland. I work in Visualization, Human-Computer Interaction, and Visual Analytics, and more specifically on supporting collaborative analytics in multi-device ecosystems through middleware frameworks and post-WIMP interaction. I enjoy rock climbing and I am a tennis fanatic. </p>
             <nav>
                 <ul>
                     @foreach (var contentPage in App.ContentPages)
