--- a/Default.cshtml
+++ b/Default.cshtml
@@ -56,7 +56,7 @@
 </div>
 
 <div id="advisorDetails">
-    <p style="font-weight: 800; color: #000">Advisor</p>
+    <p style="font-weight: 800; color: #000; font-family: Georgia">Advisor</p>
     <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a> as a 
        research assistant.
        During my undergrad, I worked on Android applications
