--- a/Contents/_Publications.cshtml
+++ b/Contents/_Publications.cshtml
@@ -9,9 +9,9 @@
     //~need to figure out how to use the json file for this~
     var publicationList = {
 
-        "Badam2015c": {
+        "Badam2014c": {
             "title": "PolyChrome: A Cross‐Device Framework for Collaborative Web Visualization",
-            "author": "S. K. Badam and N. Elmqvist",
+            "author": "<u>S. K. Badam</u> and N. Elmqvist",
             "booktitle": "In Proceedings of the ACM Conference on Interactive Tabletops and Surfaces",
             "year": "2014",
             "type": "conference"
@@ -20,25 +20,34 @@
 
         "Badam2014b": {
             "title": "Munin: A Peer-to-Peer Middleware for Ubiquitous Analytics and Visualization Spaces",
-            "author": "S. K. Badam, E. Fisher, and N. Elmqvist",
+            "author": "<u>S. K. Badam</u>, E. Fisher, and N. Elmqvist",
             "journal": "IEEE Transactions on Visualization & Computer Graphics",
             "year": "2014",
             "volume": "to appear",
             "type": "journal"
         },
-
+        
         "roberts2014": {
             "title": "Visualization Beyond the Desktop – The Next Big Thing",
-            "author": "J. C. Roberts, P. D. Ritsos, S. K. Badam, D. Brodbeck, J. Kennedy, N. Elmqvist",
+            "author": "J. C. Roberts, P. D. Ritsos, <u>S. K. Badam</u>, D. Brodbeck, J. Kennedy, N. Elmqvist",
             "journal": "IEEE Computer Graphics & Applications",
             "year": "2014",
             "volume": "to appear",
             "type": "journal"
         },
 
+        "Chandrasegaran2014": {
+            "title": "Collaborative Sketching with skWiki: A Case Study",
+            "author": "S. Chandrasegaran, <u>S. K. Badam</u>, Z. Zhao, N. Elmqvist, L. Kisselburgh, and K. Ramani",
+            "booktitle": "In Proceedings of the ASME IDETC/CIE Conference",
+            "year": "2014",
+            "type": "conference", 
+            "link": "https://engineering.purdue.edu/cdesign/wp/wp-content/uploads/2014/08/skWiki_case_study.pdf"
+        },
+
         "Badam2014a": {
             "title": "Tracing and Sketching Performance using Blunt-tipped Styli on Direct-Touch Tablets",
-            "author": "S. K. Badam, S. Chandrasegaran, N. Elmqvist, and K. Ramani",
+            "author": "<u>S. K. Badam</u>, S. Chandrasegaran, N. Elmqvist, and K. Ramani",
             "booktitle": "In Proceedings of the ACM Conference on Advanced Visual Interfaces",
             "year": "2014",
             "pages": "193-200",
@@ -49,7 +58,7 @@
 
         "Zhao2014": {
             "title": "skWiki: A Multimedia Sketching System for Collaborative Creativity",
-            "author": "Z. Zhao, S. K. Badam, S. Chandrasegaran, D. G. Park, N. Elmqvist, L. Kisselburgh, and K. Ramani",
+            "author": "Z. Zhao, <u>S. K. Badam</u>, S. Chandrasegaran, D. G. Park, N. Elmqvist, L. Kisselburgh, and K. Ramani",
             "booktitle": "In Proceedings of the ACM CHI Conference on Human Factors in Computing Systems",
             "year": "2014",
             "pages": "1235-1244",
@@ -60,7 +69,7 @@
 
         "Fisher2014": {
             "title": "Designing Peer-to-Peer Distributed User Interfaces: Case Studies on Building Distributed Applications",
-            "author": "E. R. Fisher, S. K. Badam, and N. Elmqvist",
+            "author": "E. R. Fisher, <u>S. K. Badam</u>, and N. Elmqvist",
             "journal": "International Journal of Human-Computer Studies",
             "volume": "72",
             "number": "1",
