--- a/Contents/_Publications.cshtml
+++ b/Contents/_Publications.cshtml
@@ -14,7 +14,9 @@
             "author": "<u>S. K. Badam</u> and N. Elmqvist",
             "booktitle": "In Proceedings of the ACM Conference on Interactive Tabletops and Surfaces",
             "year": "2014",
-            "type": "conference"
+            "type": "conference",
+            "link": "http://dl.acm.org/citation.cfm?id=2669518",
+            "video": "https://www.youtube.com/watch?v=pKnRloUAKps"
         },
 
 
@@ -24,7 +26,8 @@
             "journal": "IEEE Transactions on Visualization & Computer Graphics",
             "year": "2014",
             "volume": "to appear",
-            "type": "journal"
+            "type": "journal",
+            "link": "http://doi.ieeecomputersociety.org/10.1109/TVCG.2014.2337337"
         },
         
         "roberts2014": {
@@ -33,7 +36,8 @@
             "journal": "IEEE Computer Graphics & Applications",
             "year": "2014",
             "volume": "to appear",
-            "type": "journal"
+            "type": "journal", 
+            "link": "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6879056"
         },
 
         "Chandrasegaran2014": {
