--- a/Contents/_Publications.cshtml
+++ b/Contents/_Publications.cshtml
@@ -9,23 +9,33 @@
     //~need to figure out how to use the json file for this~
     var publicationList = {
 
+        "Badam2016": {
+            "title": "TimeFork: Interactive Prediction of Time Series",
+            "author": "<u>S. K. Badam</u>, J. Zhao, S. Sen, N. Elmqvist, and D. Ebert",
+            "booktitle": "In Proceedings of the ACM CHI Conference on Human Factors in Computing Systems",
+            "year": "2016",
+            "type": "conference",
+            "video": "https://www.youtube.com/watch?v=nUfSqqbaD5k",
+            "link": "http://www.umiacs.umd.edu/~elm/projects/timefork/timefork.pdf"
+        },
+
         "Badam2014c": {
             "title": "PolyChrome: A Cross‐Device Framework for Collaborative Web Visualization",
             "author": "<u>S. K. Badam</u> and N. Elmqvist",
             "booktitle": "In Proceedings of the ACM Conference on Interactive Tabletops and Surfaces",
             "year": "2014",
+            "pages": "109-118",
             "type": "conference",
             "link": "http://dl.acm.org/citation.cfm?id=2669518",
-            "video": "https://www.youtube.com/watch?v=pKnRloUAKps"
+            "video": "https://www.youtube.com/watch?v=0izPWZs7jHU"
         },
 
-
-        "Badam2014b": {
+        "Badam2015a": {
             "title": "Munin: A Peer-to-Peer Middleware for Ubiquitous Analytics and Visualization Spaces",
             "author": "<u>S. K. Badam</u>, E. Fisher, and N. Elmqvist",
             "journal": "IEEE Transactions on Visualization & Computer Graphics",
-            "year": "2014",
-            "volume": "to appear",
+            "year": "2015",
+            "volume": "21(2): 215-228",
             "type": "journal",
             "link": "http://doi.ieeecomputersociety.org/10.1109/TVCG.2014.2337337"
         },
@@ -35,7 +45,7 @@
             "author": "J. C. Roberts, P. D. Ritsos, <u>S. K. Badam</u>, D. Brodbeck, J. Kennedy, N. Elmqvist",
             "journal": "IEEE Computer Graphics & Applications",
             "year": "2014",
-            "volume": "to appear",
+            "volume": "34(6): 26-34",
             "type": "journal", 
             "link": "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6879056"
         },
@@ -166,20 +176,30 @@
 
 <div id="publicationsDiv">
     
-    <p style="font-weight: 500; font-size: 20px;">2014</p>
-    <ul id="publicationsList2014">
-        
+    <p style="font-weight: 500; font-size: 20px;">2016</p>
+    
+    <ul id="publicationsList2016">
+
     </ul>
+     
+    <br/>
+
+    <hr>
+
+    <p style="font-weight: 500; font-size: 20px;">2015</p>
 
     <ul id="publicationsList2015">
 
     </ul>
 
-    <ul id="publicationsList2016">
+    <br/>
 
+    <hr>
+
+    <p style="font-weight: 500; font-size: 20px;">2014</p>
+
+    <ul id="publicationsList2014">
+        
     </ul>
 
-    <ul id="publicationsList2017">
-
-    </ul>
 </div>
