--- a/Content/Site.mobile.css
+++ b/Content/Site.mobile.css
@@ -5,7 +5,7 @@
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     border: 0;
-    font: inherit;
+    /*font: inherit;*/
     font-size: 100%;
     margin: 0;
     padding: 0;
@@ -29,10 +29,10 @@ blockquote, q {
     quotes: none;
 }
 
-    blockquote:before, blockquote:after, q:before, q:after {
-        content: '';
-        content: none;
-    }
+blockquote:before, blockquote:after, q:before, q:after {
+    content: '';
+    content: none;
+}
 
 table {
     border-collapse: collapse;
@@ -52,12 +52,12 @@ table {
 /* Main Styles */
 
 body {
-    font-size: 13px;
-    font-family: 'Tahoma', 'Helvetica', 'Arial', sans-serif;
+    font-size: 14px;
+    font-family:  'Gill Sans', Helvetica, Sans-Serif, "Source Sans Pro", Calibri, calibri, sans-serif;
     color: #323232;
-    background: #f7f5f0 url(../images/background.png) no-repeat right top;
+    background: url(../images/background.png) no-repeat right top;
     margin-top: 80px;
-    background-size: 100% 100%;
+    background-size: 100%;
 }
 
 a {
@@ -66,79 +66,103 @@ a {
     color: #323232;
 }
 
-    a:hover {
-        background-color: transparent;
-        color: #323232;
-    }
+a:hover {
+    background-color: transparent;
+    color: #323232;
+}
 
 #page {
-    width: 1080px;
+    width: 90%;
     margin: 0 auto;
 }
 
 header {
-    font-family: 'Segoe UI', sans-serif;
+    font-family: Georgia, 'Source Sans Pro', sans-serif;
     float: left;
-    width: 300px;
+    width: 75%;
+    margin-left: 30px;
     margin-right: 30px;
+    text-align: left;
+    margin-bottom: 50px;
 }
 
-    header p {
-        font-size: 14px;
-        line-height: 20px;
-        margin-bottom: 20px;
-    }
+img.desaturate { 
+    -webkit-filter: grayscale(50%);
+    -moz-filter: grayscale(100%);
+    filter: grayscale(100%);
+    border: 1px solid black; 
+    margin-left: 1px; 
+}
+
+header p {
+   font-size: 0.9em;
+   line-height: 20px;
+   margin-bottom: 10px;
+   font-family: Georgia;
+   font-style: italic; 
+   color: #444;
+}
 
 nav {
-    margin-top: 30px;
+    margin-top: 0px;
 }
 
-    nav a {
-        background: transparent;
-        text-decoration: none;
-        color: #323232;
-        font-size: 18px;
-        padding: 10px 15px 8px 15px;
-        display: inline-block;
-        text-transform: uppercase;
-        border-top: 2px solid transparent;
-        outline: none;
-    }
+nav a {
+    background: transparent;
+    text-decoration: none;
+    color: #323232;
+    font-size: 18px;
+    padding: 10px 15px 8px 15px;
+    display: inline-block;
+    text-transform: uppercase;
+    border-top: 2px solid transparent;
+    outline: none;
+}
 
-        nav a:hover {
-            background-color: #323232;
-            color: #D6F870;
-            border-top: 1px solid #D6F870;
-        }
+nav a:hover {
+    background-color: #323232;
+    color: #ffdf7a;
+    border-top: 1px solid #ff6a00;
+}
 
-        nav a.current {
-            background-color: #323232;
-            color: #D6F870;
-            border-top: 2px solid #D6F870;
-        }
+nav a.current {
+    background-color: #323232;
+    color: #ffdf7a;
+    border-top: 2px solid #ff6a00;
+}
 
 section {
-    width: 700px;
+    width: 95%;
     background-color: #fff;
     float: left;
-    padding: 20px;
+    padding: 10px;
     border-top: 4px solid #323232;
+    border-bottom: 4px solid #323232;
+    border-left: 1px solid #323232;
+    border-right: 1px solid #323232;
 }
 
-    section p {
-        margin-bottom: 12px;
-        line-height: 150%;
-    }
+section p {
+    margin-bottom: 12px;
+    line-height: 150%;
+}
 
 h1 {
     font-size: 20px;
     margin-bottom: 15px;
 }
 
+.email {
+    
+    color: #999;
+}
+
 .title {
-    font-size: 3.2em;
+    font-size: 3.0em;
     line-height: 1em;
     margin-bottom: 17px;
+    font-style: initial;
+    font-family: helvetica, sans-serif;
 }
 
 /* Blog and Twitter Styles */
@@ -146,66 +170,66 @@ article.newsitem {
     background: url(../images/rss.png) no-repeat left top;
 }
 
-    article.newsitem .newsbody, article.twitteritem .twitterbody {
-        margin-left: 17px;
-        padding: 0px 9px 10px;
-    }
+article.newsitem .newsbody, article.twitteritem .twitterbody {
+    margin-left: 17px;
+    padding: 0px 9px 10px;
+}
 
-        article.newsitem .newsbody header, article.twitteritem .twitterbody header {
-            float: none;
-            font-family: 'Tahoma', 'Helvetica', 'Arial', sans-serif;
-            width: 100%;
-            margin-right: 0;
-        }
+article.newsitem .newsbody header, article.twitteritem .twitterbody header {
+    float: none;
+    font-family: 'Tahoma', 'calibri', 'calibri', sans-serif;
+    width: 100%;
+    margin-right: 0;
+}
 
-            article.newsitem .newsbody header h1, article.twitteritem .twitterbody header h1 {
-                font-size: 1.2em;
-                font-weight: bold;
-                margin-bottom: 2px;
-            }
+article.newsitem .newsbody header h1, article.twitteritem .twitterbody header h1 {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 2px;
+}
 
-            article.newsitem .newsbody header h2 {
-                font-size: 1.1em;
-                margin-bottom: 5px;
-            }
+article.newsitem .newsbody header h2 {
+    font-size: 1.1em;
+    margin-bottom: 5px;
+}
 
-        article.newsitem .newsbody p, article.twitteritem .twitterbody p {
-            font-size: 1.0em;
-            line-height: 1.0em;
-            margin-bottom: 8px;
-        }
+article.newsitem .newsbody p, article.twitteritem .twitterbody p {
+    font-size: 1.0em;
+    line-height: 1.0em;
+    margin-bottom: 8px;
+}
 
-        article.newsitem .newsbody .pubdate {
-            margin-top: 3px;
-        }
+article.newsitem .newsbody .pubdate {
+    margin-top: 3px;
+}
 
 /* Twitter Styles */
 article.twitteritem {
     background: url("http://twitter.com/favicon.ico") no-repeat left top;
 }
 
-    article.twitteritem .twitterbody header h1 {
-        margin-bottom: 5px;
-    }
+article.twitteritem .twitterbody header h1 {
+    margin-bottom: 5px;
+}
 
-    article.twitteritem .twitterbody .pubdate {
-        margin: -3px 0 5px 0;
-    }
+article.twitteritem .twitterbody .pubdate {
+    margin: -3px 0 5px 0;
+}
 
 ul.twitteractions li {
     display: inline;
     list-style: none;
 }
 
-    ul.twitteractions li a {
-        background: none;
-        color: #999;
-        height: 20px;
-        padding: 0 7px 0 7px;
-        text-decoration: none;
-        text-indent: -9999px;
-        width: 20px;
-    }
+ul.twitteractions li a {
+    background: none;
+    color: #999;
+    height: 20px;
+    padding: 0 7px 0 7px;
+    text-decoration: none;
+    text-indent: -9999px;
+    width: 20px;
+}
 
 
 /* Photos Styles */
@@ -214,75 +238,192 @@ ul.thumbnails {
     padding: 0;
 }
 
-    ul.thumbnails li {
-        position: relative;
-        list-style: none;
-        float: left;
-        margin: 8px;
-        padding: 5px;
-        font-size: small;
-        text-align: center;
-        border: 1px solid transparent;
-        width: 100px;
-        height: 100px;
-        line-height: 100px;
-        display: block;
-    }
+ul.thumbnails li {
+    position: relative;
+    list-style: none;
+    float: left;
+    margin: 8px;
+    padding: 5px;
+    font-size: small;
+    text-align: center;
+    border: 1px solid transparent;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    display: block;
+}
 
-        ul.thumbnails li span {
-            display: block;
-        }
+ul.thumbnails li span {
+    display: block;
+}
 
-            ul.thumbnails li span.image-overlay {
-                display: none;
-                width: 100px;
-                padding: 5px;
-                background-color: #b6ebe3;
-                color: #343434;
-                font-size: 0.8em;
-                /*CSS3 properties*/
-                border-radius: 7px 7px 0 0;
-                -moz-border-radius: 7px 7px 0 0;
-                -webkit-border-radius: 7px 7px 0 0;
-                word-wrap: break-word;
-            }
+ul.thumbnails li span.image-overlay {
+    display: none;
+    width: 100px;
+    padding: 5px;
+    background-color: #b6ebe3;
+    color: #343434;
+    font-size: 0.8em;
+    /*CSS3 properties*/
+    border-radius: 7px 7px 0 0;
+    -moz-border-radius: 7px 7px 0 0;
+    -webkit-border-radius: 7px 7px 0 0;
+    word-wrap: break-word;
+}
 
-            ul.thumbnails li span.below-image {
-                line-height: normal;
-            }
+ul.thumbnails li span.below-image {
+    line-height: normal;
+}
 
-        ul.thumbnails li img {
-            margin: auto;
-            display: inline;
-            vertical-align: middle;
-        }
+ul.thumbnails li img {
+    margin: auto;
+    display: inline;
+    vertical-align: middle;
+}
 
-        ul.thumbnails li:hover {
-            background: #f3f6f7;
-            border-color: #dbe2e5;
-            /*CSS3 properties*/
-            border-radius: 7px;
-            -moz-border-radius: 7px;
-            -webkit-border-radius: 7px;
-            box-shadow: 0px 0px 10px #d0d0d0;
-            -moz-box-shadow: 0px 0px 10px #d0d0d0;
-            -webkit-box-shadow: 0px 0px 10px #d0d0d0;
-        }
+ul.thumbnails li:hover {
+    background: #f3f6f7;
+    border-color: #dbe2e5;
+    /*CSS3 properties*/
+    border-radius: 7px;
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
+    box-shadow: 0px 0px 10px #d0d0d0;
+    -moz-box-shadow: 0px 0px 10px #d0d0d0;
+    -webkit-box-shadow: 0px 0px 10px #d0d0d0;
+}
 
-            ul.thumbnails li:hover span.image-overlay {
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                line-height: normal;
-            }
+ul.thumbnails li:hover span.image-overlay {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: normal;
+}
 
 .thumbnail-border {
     border: 1px solid #dbe2e5;
     display: block;
 }
 
-.hide-from-desktop
-{
+.hide-from-desktop {
     display: none;
+}
+
+.mainContactDiv {
+    width: 33%;
+    margin: 0px;
+    border: 1px dashed #343434;
+    padding: 5px;
+    display: inline-block;
+    float: left;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    font-size: 100%;
+}
+
+.mainContactDiv p {
+    margin: 0px;
+    font-family: sans-serif, Roboto, 'Gill Sans', 'Source Sans Pro';
+}
+
+#defaultKeyWords {
+    width: 65%;
+    margin-left: 5px;
+    border: 1px dashed #343434;
+    padding: 5px;
+    display: inline-block;
+    float: right;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    font-size: 100%;
+}
+
+#defaultKeyWords p {
+    margin: 0px;
+    font-family: sans-serif,'Source Sans Pro';
+}
+
+#defaultKeyWords a {
+    margin: 0px;
+    color: #ff6a00;
+    font-family: sans-serif, 'Source Sans Pro';
+}
+
+#advisorDetails {
+    width: 100%;
+    border: 1px dashed #343434;
+    padding: 5px;
+    margin-top: 10px;
+    display: inline-block;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+
+#demoDetails {
+    width: 100%;
+    border: 1px dashed #343434;
+    padding: 5px;
+    margin-top: 10px;
+    display: inline-block;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+
+#advisorDetails p {
+    margin: 0px;
+    font-family: helvetica, sans-serif;
+    font-size: 14px;
+    color: #333;
+    text-align: justify;
+}
+
+#advisorDetails a {
+    margin: 0px;
+    color: #ff6a00;
+    font-family: sans-serif;
+}
+
+#footer {
+    margin-top: 10px;
+    font-family: 'Source Sans Pro';
+    color: #999;
+}
+
+#publicationJournal {
+    margin-bottom: 5px;
+    font-family: sans-serif;
+    margin-top: 10px;
+    font-size: 100%;
+}
+
+#publicationConference {
+    margin-bottom: 5px;
+    font-family: sans-serif;
+    margin-top: 10px;
+    font-size: 100%;
+}
+
+#publicationsDiv a {
+    color: #ff6a00;
+    font-family: 'Source Sans Pro';
+    margin-left: 5px;
+}
+
+#projectsDiv {
+    font-family: sans-serif;
+    margin-top: 10px;
+    font-size: 100%;
+}
+
+#projectsDiv a {
+    color: #ff6a00;
+    font-family: 'Source Sans Pro';
+    margin-left: 5px;
 }
