--- a/Default.cshtml
+++ b/Default.cshtml
@@ -16,9 +16,7 @@
     
     <p style="font-family: Georgia; font-weight: 800; padding-top: 10px">Links</p>
     <a href="http://scholar.google.com/citations?user=ExY_mkUAAAAJ&hl=en" style="color: #ff6a00; font-size: 12px">[Google Scholar]</a>
-    <a href="data/badam-CV.pdf" style="color: #ff6a00; font-size: 12px">[Resume]</a>
-
-    
+    <a href="data/badam-CV.pdf" style="color: #ff6a00; font-size: 12px">[Resume]</a>    
 </div>
 
 <div id="defaultKeyWords" class="mainKeyWordDiv">
@@ -39,32 +37,44 @@
 
     <p style="font-weight: 800; padding-top: 10px; font-family: Georgia">News & Events</p>
     <ul>
+
         <li>
-            <p>>> <a href="http://its2014.org/">ACM ITS 2014 (Dresden, Germany)</a> -- Presenting PolyChrome framework for collaborative web visualization</p>
+            <p>>> <a href="https://chi2016.acm.org/wp/">ACM CHI 2016 (San Jose, USA)</a> -- Presenting TimeFork technique for interactive prediction of time-series data. </p>
         </li>
 
         <li>
-            <p>>> <a href="http://avi2014.deib.polimi.it">ACM AVI 2014 (Como, Italy)</a> -- Presented work on performance of direct-touch tablets for sketching</p>
+            <p>>> <a href="http://ieeevis.org/year/2015/info/vis-welcome/welcome">IEEE VIS 2015 (Chicago, USA)</a> -- Presented our vision paper on visualization beyond the desktop (published in IEEE CG&A journal). </p>
         </li>
 
         <li>
-            <p>>> <a href="http://chi2014.acm.org">ACM CHI 2014 (Toronto, Canada)</a> -- Presented <a href="https://github.com/karthikbadam/skWiki">skWiki</a>: a collaborative content creation framework for early design</p>
+            <p>>> <a href="http://its2014.org/">ACM ITS 2014 (Dresden, Germany)</a> -- Presented PolyChrome framework for collaborative web visualization</p>
         </li>
         
     </ul>
 
 </div>
 
+
+<div id="demoDetails">
+
+
+    <p style="font-weight: 800; color: #000; font-family: Georgia">Research Demos (Duration < 15 min)</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLjdOjPncIWm3esJSaYNLnKQKe19dlgi4J" frameborder="0" allowfullscreen></iframe>
+
+</div>
+
+
 <div id="advisorDetails">
-    <p style="font-weight: 800; color: #000; font-family: Georgia">Advisor</p>
-    <p>I am very privileged to work with <a href="https://engineering.purdue.edu/~elm/"> Dr. Niklas Elmqvist</a> as a 
+
+
+    <p style="font-weight: 800; color: #000; font-family: Georgia">Current Work</p>
+    <p>I am very privileged to work with <a href="https://sites.umiacs.umd.edu/elm/"> Dr. Niklas Elmqvist</a> as a 
        research assistant.
-       During my undergrad, I worked on Android applications
-       for data collection and sharing through bluetooth-based peer-to-peer networks in post-disaster situations.
+       I focus on taking advantage of modern devices including large wall-mounted and tabletop displays, as well as portable devices, to support collaborative visual sensemaking. To this end, I have developed systems that enable cross-device interaction for visualization including <a href="http://www.umiacs.umd.edu/~elm/projects/munin/munin.pdf">Munin</a> and <a href="http://www.umiacs.umd.edu/~elm/projects/polychrome/polychrome.pdf">PolyChrome</a>, and designed natural interaction styles for large display spaces (e.g., based on body movement and hand gestures).
        I received a Masters degree from Purdue University with a thesis in computer engineering titled "Developing Digital Media Platforms for Early Design". 
        This work incidentally combines my interest in direct-touch tablets and sketching. 
-       My research interests have evolved over time under Niklas's guidance and a unified summary of my current research directions
-       can be found <a href="/data/DC_proposal_badam.pdf">here</a>.
+       My research interests have evolved over time and a unified summary of my current research directions
+       can be found <a href="/data/Badam-proposal.pdf">here</a>.
        
 </div>
 
